# chatter_research

./: .gitignore  CNC_CHATTER_DIGITAL_TWIN_RL_RESEARCH_SYNTHESIS.md  CNC_CHATTER_DIGITAL_TWIN_RL_SYSTEM_DESIGN.md  README.md  pyproject.toml
docs/: EXPERIMENT_LOG.md  INTERNAL_DEMO_REPORT.md  INTERNAL_DEMO_SUMMARY.json  MACHINE_RUN_DATA_CONTRACT.md  OFFLINE_RISK_TRAINING.md  REAL_DATASETS.md  REPLAY_SCHEMA.md  RL_CONTROLLERS.md  SHADOW_RECOMMENDATIONS.md
src/chatter_twin/: __init__.py  benchmark.py  calibration.py  cli.py  controllers.py  counterfactual.py  datasets.py  demo.py  dynamics.py  env.py  features.py  models.py  offline.py  policy_selection.py  pseudo_label.py  realdata.py  replay.py  risk.py  rl.py  rl_compare.py  rl_shadow.py  scenarios.py  shadow.py  shield.py  stability.py
tests/: test_benchmark.py  test_calibration.py  test_counterfactual.py  test_datasets.py  test_demo.py  test_dynamics.py  test_features_risk.py  test_offline.py  test_policy_selection.py  test_pseudo_label.py  test_realdata.py  test_replay.py  test_rl.py  test_rl_shadow.py  test_shadow.py  test_shield_env_cli.py  test_stability.py
