[project]
name = "chatter-twin"
version = "0.1.0"
description = "Software-first CNC milling chatter digital twin MVP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "gymnasium>=0.29",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "scipy>=1.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]
rl = [
  "stable-baselines3>=2.3",
  "torch>=2.2,<2.6",
]
mat = [
  "h5py>=3.11",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project.scripts]
chatter-twin = "chatter_twin.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
